client/one/less/style.less
/* ... */
zem-submission-status {
    .popover{
        max-width: 600px;
    }
}

.table .submission-status {
    display: table;
    width: 60px;
    cursor: default;
    border-collapse: separate;

    .cell {
        display: table-cell;
        text-align: center;
        color: #0ab00a;
        font-size: 10px;
        padding: 1px;
        border: 1px solid #0ab00a;

        &.archived {
            background-color: #d9d9d9;
            border-color: #d9d9d9;
            color: #fff;
        }

        &.approved {
            &.archived {
                .table .submission-status .cell .archived
            }
            background-color: #0ab00a;
            color: #fff;
        }

        &:first-child {
            .border-left-radius(2px);
        }

        &:last-child {
            .border-right-radius(2px);
        }
    }
}

.submission-status-popover {

    .submission-status-emphasis {
        font-style: italic;
    }

    .submission-status-popover-table {
        display: table;
        font-size: 11px;

        .submission-status-popover-row {
            display: table-row;

            .submission-status-popover-cell {
                display: table-cell;
                white-space: nowrap;

                &.bold {
                    font-weight: 600;
                }

                hr {
                    margin: 3px 0;
                }

            }

            .left-cell {
                padding-right: 10px;
            }

            .submission-status-label {
                font-weight: 600;
                color: #25a8c9;
            }
        }
    }
}

.thumbnail-popover {
    margin: 0 -5px;
    img {
        height: 80px;
    }
}

.selected-locations {
    border: 1px solid #d2d2d2;
    border-radius: 2px;
    box-shadow: none;
    padding: 6px 12px 11px 12px;
    margin-top: 7px;
    margin-bottom: 7px;

    .location-tag {
        cursor: pointer;
        margin-right: 5px;
        margin-top: 5px;
        height: 28px;
        line-height: 28px;
        display: inline-block;
        position: relative;
        border-radius: 2px;
        font-size: 13px;
        border: 1px solid @add-filter-color;

        .location-dma {
            padding: 6px 6px 5px 6px;
            border-right: 1px solid @add-filter-color;
            margin: 0;
        }

        .location-name {
            padding: 6px 27px 6px 6px;
            margin: 0;
            img.remove {
                width: 7px;
                position: absolute;
                right: 8px;
                top: 10px;
                display: inline-block;
                width: 7px;
            }
        }
    }
}

.ui-select-container {
    cursor: pointer;

    &.form-control .ui-select-dropdown {
        /* parent element has border (1px) so dropdown needs positioning) */
        left: -1px;
        width: calc(~"100% + 2px");
    }

    .ui-select-dropdown {
        .ui-select-highlight {
            font-weight: normal;
            text-decoration: underline;
        }
    }
}

.select2-result-label .location-dma-tag {
    float: right;
    font-size: 10px;
    color: #d2d2d2;
    font-weight: 600;
    margin-left: 5px;
    margin-top: 4px;
}

.select2-locations .select2-no-results {
    font-size: 12px;
}

.tutorial.popover {
    background: transparent;
    padding: 0px;
    z-index: 100000;
    &:before {
        display: block;
        height: 0px;
    }
    .popover-inner {
        background-color: #fff;
        color: #414141;
        font-weight: 300;
        border: 2px solid #f68620;
        border-radius: 6px;
        .box-shadow(0 1px 2px rgba(50, 50, 50, 0.1));
    }
    & > .arrow {
        border-width: 11px;
    }
    &.bottom > .arrow {
        border-bottom-color: #f68620;   
        top: -20px;
    }
    &.top > .arrow {
        border-top-color: #f68620;
        bottom: -20px;
    }
    &.left > .arrow {
        border-left-color: #f68620;
        right: -20px;
    }
    &.right > .arrow {
        border-right-color: #f68620;
        left: -20px;
    }
}

.table div.zem-selection-menu.dropdown {
    .dropdown-toggle {
        line-height: 18px;

        input[type=checkbox] {
            margin: 3px 0 0;
            vertical-align: text-top;
            cursor: pointer;
        }
    }

    .dropdown-toggle,
    &.open:hover .dropdown-toggle {
        border-color: @default-color;
    }

    &:not(.open):not(:hover) .dropdown-toggle {
        border-color: #bbb;
    }

    .dropdown-menu {
        padding: 8px 10px;

        .divider {
            margin: 0;
        }

        .link {
            font-weight: 300;
            cursor: pointer;
            &:hover {
                text-decoration: underline;
            }
        }

        .link-list {
            .link-list-name {
                vertical-align: top;
                display: inline-block;
                font-weight: 300;
                line-height: 22px;
            }

            .link-list-items {
                display: inline-block;
                font-weight: 400;
                line-height: 22px;

                .link-list-item {
                    cursor: pointer;
                    &:hover {
                        text-decoration: underline;
                    }
                }
            }
        }
    }
}

